--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./nexdefend-frontend
+        working-directory: ./ui
     steps:
       - uses: actions/checkout@v4
 
@@ -97,7 +97,7 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: nexdefend-frontend/package-lock.json
+          cache-dependency-path: ui/package-lock.json
 
       - name: Install Dependencies
         run: npm ci
