--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,12 +58,12 @@ services:
 
   frontend:
     build:
-      context: nexdefend-frontend
+      context: ui
       dockerfile: Dockerfile
     ports:
       - "3000:5173"
     volumes:
-      - ./nexdefend-frontend:/app
+      - ./ui:/app
       - /app/node_modules
     environment:
       VITE_API_BASE_URL: /api/v1
